--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.8.1
+beautifulsoup4==4.13.4
 Django==5.2
 djangorestframework==3.16.0
 exceptiongroup==1.2.2
@@ -9,6 +10,8 @@ psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pytest==8.3.5
 python-dotenv==1.1.0
+soupsieve==2.7
 sqlparse==0.5.3
 tomli==2.2.1
 typing_extensions==4.13.2
+webencodings==0.5.1
