--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 beautifulsoup4==4.13.4
 Django==5.2
+django-cors-headers==4.7.0
 djangorestframework==3.16.0
 exceptiongroup==1.2.2
 iniconfig==2.1.0
