--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,41 @@
 asgiref==3.8.1
+async-timeout==5.0.1
+attrs==25.3.0
+autobahn==24.4.2
+Automat==25.4.16
 beautifulsoup4==4.13.4
+cffi==1.17.1
+channels==4.2.2
+channels_redis==4.2.1
+constantly==23.10.4
+cryptography==44.0.3
+daphne==4.1.2
 Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 exceptiongroup==1.2.2
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
 iniconfig==2.1.0
+msgpack==1.1.0
 packaging==25.0
 pluggy==1.5.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.22
+pyOpenSSL==25.0.0
 pytest==8.3.5
 python-dotenv==1.1.0
+redis==6.0.0
+service-identity==24.2.0
 soupsieve==2.7
 sqlparse==0.5.3
 tomli==2.2.1
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.13.2
 webencodings==0.5.1
+zope.interface==7.2
