--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,7 @@ incremental==24.7.2
 iniconfig==2.1.0
 msgpack==1.1.0
 packaging==25.0
+pillow==11.2.1
 pluggy==1.5.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
