--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,19 @@
+amqp==5.3.1
 asgiref==3.8.1
 async-timeout==5.0.1
 attrs==25.3.0
 autobahn==24.4.2
 Automat==25.4.16
 beautifulsoup4==4.13.4
+billiard==4.2.1
+celery==5.5.2
 cffi==1.17.1
 channels==4.2.2
 channels_redis==4.2.1
+click==8.2.0
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 constantly==23.10.4
 cryptography==44.0.3
 daphne==4.1.2
@@ -18,10 +25,12 @@ hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
 iniconfig==2.1.0
+kombu==5.5.3
 msgpack==1.1.0
 packaging==25.0
 pillow==11.2.1
 pluggy==1.5.0
+prompt_toolkit==3.0.51
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
@@ -29,14 +38,19 @@ pyasn1_modules==0.4.2
 pycparser==2.22
 pyOpenSSL==25.0.0
 pytest==8.3.5
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 redis==6.0.0
 service-identity==24.2.0
+six==1.17.0
 soupsieve==2.7
 sqlparse==0.5.3
 tomli==2.2.1
 Twisted==24.11.0
 txaio==23.1.1
 typing_extensions==4.13.2
+tzdata==2025.2
+vine==5.1.0
+wcwidth==0.2.13
 webencodings==0.5.1
 zope.interface==7.2
