--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3'
 
 services:
+  redis:
+    image: 'redis:8-alpine'
+    container_name: redis
+    restart: always
+    ports:
+      - '6380:6379'
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      retries: 5
   database:
     image: 'postgres:14.17'
     container_name: postgresql_db
@@ -27,9 +39,15 @@ services:
       DB_USER: ${POSTGRES_USER}
       DB_PASSWORD: ${POSTGRES_PASSWORD}
       DB_PORT: 5432
+      REDIS_HOST: redis
     build:
       context: ../backend
       dockerfile: 'Dockerfile'
     depends_on:
       database:
         condition: service_healthy
+      redis:
+        condition: service_healthy
+
+volumes:
+  redis-data:
