--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -48,6 +48,25 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+  celery:
+    container_name: celery_worker
+    build:
+      context: ../backend
+      dockerfile: 'Dockerfile'
+    command: celery -A conf worker -l info
+    environment:
+      SECRET_KEY: ${SECRET_KEY}
+      DB_HOST: database
+      DB_NAME: ${POSTGRES_DB}
+      DB_USER: ${POSTGRES_USER}
+      DB_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_PORT: 5432
+      REDIS_HOST: redis
+    depends_on:
+      - backend-app
+      - redis
+
+
 
 volumes:
   redis-data:
