[deploy]: added frontend in docker

--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -65,6 +65,15 @@ services:
     depends_on:
       - backend-app
       - redis
+  frontend-app:
+    container_name: frontend
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    ports:
+      - "8080:80"
+    depends_on:
+      - backend-app
 
 
 
