--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -70,6 +70,8 @@ services:
     build:
       context: ../frontend
       dockerfile: Dockerfile
+      args:
+        VITE_BACKEND_API_URL: '/api/v1'
     ports:
       - "8080:80"
     depends_on:
