--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 COPY . .
 
 ARG VITE_BACKEND_API_URL
+ARG VITE_WS_BASE_URL
+ENV VITE_WS_BASE_URL=$VITE_WS_BASE_URL
 ENV VITE_BACKEND_API_URL=$VITE_BACKEND_API_URL
 
 RUN npm install
