--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,6 +12,13 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    location /ws/ {
+        proxy_pass http://backend:8000/ws/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+    }
+
     location / {
         try_files $uri $uri/ /index.html;
     }
