--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,6 +4,10 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    location /uploads/ {
+        alias /app/uploads/;
+    }
+
     location /api/v1/ {
         proxy_pass http://backend-app:8000/api/v1/;
         proxy_set_header Host $host;
