--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -20,6 +20,7 @@ daphne==4.1.2
 Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+djangorestframework_simplejwt==5.5.0
 exceptiongroup==1.2.2
 hyperlink==21.0.0
 idna==3.10
@@ -36,6 +37,7 @@ psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
+PyJWT==2.9.0
 pyOpenSSL==25.0.0
 pytest==8.3.5
 python-dateutil==2.9.0.post0
